[gd_scene load_steps=9 format=2]

[ext_resource path="res://boss_defeated.gd" type="Script" id=1]
[ext_resource path="res://Assets/Charsets/vitor_hattrick6.png" type="Texture" id=2]
[ext_resource path="res://teleport_out_particles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Objects/heartparticle.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/tp_out.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/ping.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fadein"

[sub_resource type="Animation" id=2]
length = 3.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2 ),
"transitions": PoolRealArray( 168.897, 194.012, 163.144, 107.635, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.3 ), Color( 0, 0, 0, 0.6 ), Color( 0, 0, 0, 0.8 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="teleport_out" type="TextureProgress" parent="."]
visible = false
show_behind_parent = true
margin_left = -49.5768
margin_top = -50.2202
margin_right = 50.4232
margin_bottom = 49.7798
max_value = 500.0
value = 500.0
rounded = true
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="teleport_out_particles" parent="teleport_out" instance=ExtResource( 3 )]
emitting = true

[node name="blackscreen" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.10416, 20.0589 )
scale = Vector2( 500, 500 )
texture = ExtResource( 4 )

[node name="anim" type="AnimationPlayer" parent="blackscreen"]
anims/fadein = SubResource( 1 )
anims/fadeout = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="tp_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="ping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ping_timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="blackscreen/anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="ping_timer" to="." method="_on_ping_timer_timeout"]
